--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <nav class="nav">
         <div class="burger">
           <button class="burger_btn" > 
-              <svg class="burger_icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="burger_icon" width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 8H48V13H0V8Z" fill="#005BBB"/>
               <path d="M0 21H48V26H0V21Z" fill="#005BBB"/>
               <path d="M48 34H0V39H48V34Z" fill="#005BBB"/>
